--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 # Server port is arbitrary
+
 server.port=8082
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pet
+spring.datasource.username=sa
+spring.datasource.password=12345
+
+
 
 # Data Source Setup
 # Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
