--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pet
 spring.datasource.username=sa
